--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
 		"lucide-svelte": "^0.454.0",
+		"marked": "^14.1.3",
 		"mode-watcher": "^0.4.1",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
@@ -42,6 +43,8 @@
 	},
 	"dependencies": {
 		"@fontsource/geist-mono": "^5.1.0",
-		"@fontsource/geist-sans": "^5.1.0"
+		"@fontsource/geist-sans": "^5.1.0",
+		"sveltekit-superforms": "^2.20.0",
+		"zod": "^3.23.8"
 	}
 }
