--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"build:registry": "jsrepo build --dirs ./src/lib/components ./src --include-categories ui lib --include-blocks ipv4address-input utils"
+		"build:registry": "jsrepo build"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -25,7 +25,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
-		"jsrepo": "^1.15.1",
+		"jsrepo": "^1.16.1",
 		"lucide-svelte": "^0.454.0",
 		"marked": "^14.1.3",
 		"mode-watcher": "^0.4.1",
